# device_scanner

./: CMakeLists.txt  configure.sh  main.c  memory.c  memory.h  utils.c  utils.h
